--- a/view/api/index_index.html
+++ b/view/api/index_index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>讨小海</title>
+    <title></title>
 </head>
 <body>
 </body>
-<!-- <script>window.location.href='http://www.zshxtop.com';</script> -->
+
 </html>
